--- a/src/loadingAnimation.css
+++ b/src/loadingAnimation.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: -30px;
+    margin-bottom: -30px;
 }
 
 .lds-ellipsis {
